[gd_scene load_steps=18 format=3 uid="uid://bkccb8pewih0m"]

[ext_resource type="Script" uid="uid://cfj14ljq7ajb" path="res://player/hand/hand_model.gd" id="1_2vl85"]
[ext_resource type="PackedScene" uid="uid://deh6rxecvrydy" path="res://player/hand/right_hand.blend" id="1_t3s1v"]

[sub_resource type="Animation" id="Animation_2nfeg"]
resource_name = "thumb"
step = 0.0333333
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.24596252, 0.9450369, -0.031994484, -0.21303542, 1, 1, 0.007, -0.984, 0.083, 0.16)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1.2231729e-08, -1.4019477e-06, 0.14235091, 0.98981625, 1, 1, 0, 0, 0.402, 0.916)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 3.0595112e-07, 2.700938e-08, -0.008720836, 0.999962, 1, 1, -3.77533e-15, 0, 0.5560842, 0.83112586)

[sub_resource type="Animation" id="Animation_2vl85"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.24596252, 0.9450369, -0.031994484, -0.21303542)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1.2231729e-08, -1.4019477e-06, 0.14235091, 0.98981625)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_thumb3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 3.0595112e-07, 2.700938e-08, -0.008720836, 0.999962)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ra35s"]
_data = {
&"RESET": SubResource("Animation_2vl85"),
&"thumb": SubResource("Animation_2nfeg")
}

[sub_resource type="Animation" id="Animation_ra35s"]
resource_name = "index"
step = 0.0333333
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0109452335, 0.73294145, 0.6609519, -0.1606849, 1, 1, -0.429, -0.595, -0.434, 0.524)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -5.9718207e-07, 5.687448e-07, 0.18624678, 0.982503, 1, 1, 0, 0, 0.827, 0.563)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -1.4647802e-07, -9.628366e-07, 0.05959552, 0.9982226, 1, 1, 0, 0, 0.648, 0.762)

[sub_resource type="Animation" id="Animation_epdvo"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.0109452335, 0.73294145, 0.6609519, -0.1606849)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -5.9718207e-07, 5.687448e-07, 0.18624678, 0.982503)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_index3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -1.4647802e-07, -9.628366e-07, 0.05959552, 0.9982226)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e221x"]
_data = {
&"RESET": SubResource("Animation_epdvo"),
&"index": SubResource("Animation_ra35s")
}

[sub_resource type="Animation" id="Animation_e221x"]
resource_name = "middle"
step = 0.0333333
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.033651516, 0.6480089, 0.75659454, -0.080726504, 1, 1, -0.447, -0.47, -0.523, 0.553)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -5.443112e-07, 6.3858346e-07, 0.2355825, 0.9718544, 1, 1, 0, 0, 0.754, 0.657)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -8.586762e-08, 1.2693472e-07, 0.06577546, 0.99783444, 1, 1, 0, 0, 0.737, 0.676)

[sub_resource type="Animation" id="Animation_c2fri"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.033651516, 0.6480089, 0.75659454, -0.080726504)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -5.443112e-07, 6.3858346e-07, 0.2355825, 0.9718544)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_middle3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -8.586762e-08, 1.2693472e-07, 0.06577546, 0.99783444)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5ryw"]
_data = {
&"RESET": SubResource("Animation_c2fri"),
&"middle": SubResource("Animation_e221x")
}

[sub_resource type="Animation" id="Animation_v5ryw"]
resource_name = "ring"
step = 0.0333333
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.101800956, 0.569299, 0.81520987, -0.031114371, 1, 1, 0.434, 0.383, 0.619, -0.531)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1.0405108e-06, -7.083368e-07, 0.20290406, 0.97919863, 1, 1, 0, 0, 0.76, 0.65)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -4.4487984e-07, 1.1252841e-06, 0.08394429, 0.99647045, 1, 1, 0, 0, 0.717, 0.697)

[sub_resource type="Animation" id="Animation_fxc0y"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.101800956, 0.569299, 0.81520987, -0.031114371)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 1.0405108e-06, -7.083368e-07, 0.20290406, 0.97919863)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_ring3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, -4.4487984e-07, 1.1252841e-06, 0.08394429, 0.99647045)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5npa"]
_data = {
&"RESET": SubResource("Animation_fxc0y"),
&"ring": SubResource("Animation_v5ryw")
}

[sub_resource type="Animation" id="Animation_v5npa"]
resource_name = "pinky"
step = 0.0333333
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.018902805, 0.0067436164, 0.99286634, -0.117531486, 1, 1, -0.019, 0.007, -0.716, 0.698)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -1.7721416e-07, -9.911424e-07, 0.1645813, 0.98636353, 1, 1, 0, 0, 0.751, 0.66)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 3.4100808e-07, 5.556822e-07, 0.04699491, 0.99889517, 1, 1, 0, 0, 0.694, 0.72)

[sub_resource type="Animation" id="Animation_i51xf"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.018902805, 0.0067436164, 0.99286634, -0.117531486)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -1.7721416e-07, -9.911424e-07, 0.1645813, 0.98636353)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("right_hand/Armature/Skeleton3D:hands_b_r_pinky3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(0, 1, 3.4100808e-07, 5.556822e-07, 0.04699491, 0.99889517)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i51xf"]
_data = {
&"RESET": SubResource("Animation_i51xf"),
&"pinky": SubResource("Animation_v5npa")
}

[node name="Hand" type="Node3D"]
script = ExtResource("1_2vl85")

[node name="right_hand" parent="." instance=ExtResource("1_t3s1v")]
transform = Transform3D(-0.9272231, -0.3745095, 0, 0.35375142, -0.8758295, 0.32830256, -0.12295243, 0.3044097, 0.9445726, -0.3676025, -0.35032955, -0.8699095)

[node name="Skeleton3D" parent="right_hand/Armature" index="0"]
bones/12/rotation = Quaternion(-1.4647802e-07, -9.628366e-07, 0.059595525, 0.99822265)

[node name="ThumbAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ra35s")
}

[node name="IndexAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e221x")
}

[node name="MiddleAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v5ryw")
}

[node name="RingAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v5npa")
}

[node name="PinkyAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i51xf")
}

[editable path="right_hand"]
